--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">Task2</string>
     <string name="search_hint">search picture</string>
     <string name="btn_name">Search</string>
+    <string name="btn_recent">Recent</string>
+    <string name="btn_favourites">Favourites</string>
+    <string name="tv_favourites_header">Favourites</string>
+    <string name="tv_recent_header">Recent</string>
+
+    <string name="toast_in_favourites">Photo is already in favourites</string>
+    <string name="toast_not_in_favourites">Photo is not in favourites</string>
+    <string name="toast_added_to_favourites">Photo is added to favourites</string>
+    <string name="toast_deleted_from_favourites">Photo deleted from favourites</string>
+    <string name="toast_no_favourites">No favourite photos</string>
 </resources>
