--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <string name="btn_map">Map</string>
     <string name="title_activity_maps">Map</string>
     <string name="btn_search">Search</string>
+    <string name="tv_gallery">Gallery</string>
+    <string name="toast_download_completed">Download completed</string>
+    <string name="toast_required_write_external_storage_permission">Required write external storage permission</string>
+
+
 </resources>
